2022-11-03  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* pickles/riscv.pk (RV32_Insn): Make it integral union and
	remove `as_uint' method.

2022-11-03  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/pkl-gen.pks (struct_mapper): Handle integral unions.
	* testsuite/poke.map/maps-int-union-6.pk: New test.
	* testsuite/Makefile.am (EXTRA_DIST): Update.

2022-11-03  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-cmd-misc.c (pk_cmd_jmd): New quote.

2022-11-02  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-rt.pk (_pkl_print_format_any): Fix `lutos' for long
	values.
	* libpoke/std.pk (ltos): Likewise.
	* testsuite/poke.pkl/printf-40.pk: New test.
	* testsuite/poke.std/std-test.pk: Test ltos with i > 2^31.
	* testsuite/Makefile.am (EXTRA_DIST): Add new test.

2022-11-01  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-ast.h (PKL_AST_DECL_PREV_NAME): Define.
	(struct pkl_ast_decl): New field prev_name.
	* libpoke/pkl-ast.c (pkl_ast_node_free_1): Free PREV_NAME.
	(pkl_ast_print_1): Print PREV_NAME.
	* libpoke/pkl-env.h: Prototype for pkl_env_rollback_renames.
	* libpoke/pkl-env.c (pkl_env_rollback_renames_1): New function.
	(pkl_env_rollback_renames): Likewise.
	(register_decl): Cache the previous name used in the decl.
	* libpoke/pkl.c (pkl_compile_expression): Rollback renames in the
	compile-time environment in case of compilation error.
	(pkl_execute_expression): Likewise.
	(pkl_execute_file): Likewise.
	(pkl_execute_statement): Likewise.
	(pkl_execute_buffer): Likewise.

2022-11-01  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-trans.c (pkl_trans2_ps_exp): Do not assume EXP
	expressions will be constant-folded.
	* libpoke/pkl-fold.c (OP_BINARY_III): Add a note regarding the
	workaround in pkl_trans2_ps_exp.
	* testsuite/poke.pkl/pow-folding-workaround.pk: New test.
	* testsuite/Makefile.am (EXTRA_DIST): Add new test.

2022-11-01  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-ast.c (pkl_ast_sizeof_type): Add assertion.
