@@ -301,8 +301,6 @@ S ::
 
 "__PKL_BUILTIN_SET_IOS__" {
    if (yyextra->bootstrapped) { RESTORE_LOC; REJECT; } return BUILTIN_SET_IOS; }
-"__PKL_BUILTIN_OPEN__" {
-   if (yyextra->bootstrapped) { RESTORE_LOC; REJECT; } return BUILTIN_OPEN; }
 "__PKL_BUILTIN_CLOSE__" {
    if (yyextra->bootstrapped) { RESTORE_LOC; REJECT; } return BUILTIN_CLOSE; }
 "__PKL_BUILTIN_GETENV__" {
