@@ -1,3 +1,15 @@
+2022-11-10  Jose E. Marchesi  <jemarch@gnu.org>
+
+	* libpoke/pvm.jitter (open): Modified to not raise exceptions.
+	* libpoke/pkl-ast.h (PKL_AST_BUILTIN_OPEN): Remove.
+	* libpoke/pkl-lex.l: Do not recognize __PKL_BUILTIN_OPEN__.
+	* libpoke/pkl-tab.y (builtin): Remove rule for BUILTIN_OPEN.
+	* libpoke/pkl-gen-builtins.pks (builtin_open): Remove.
+	* libpoke/pkl-gen.c (pkl_gen_ps_comp_stmt): Do not handle
+	PKL_AST_BUILTIN_OPEN.
+	* libpoke/pkl-rt.pk (open): Handle error status from `open' and
+	raise proper exceptions.
+
 2022-11-03  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
 
 	* pickles/riscv.pk (RV32_Insn): Make it integral union and
